--- a/CarListingApp/CarListingApp.csproj
+++ b/CarListingApp/CarListingApp.csproj
@@ -29,6 +29,13 @@
         <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
         <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
     </PropertyGroup>
+    
+<!--    // Possible workaround for .Net 7/Maui publishing issue for Andriod   -->
+    <PropertyGroup Condition="$(TargetFramework.Contains('-android')) and '$(Configuration)' == 'Release'">     
+        <PublishTrimmed>False</PublishTrimmed>     
+        <EnableTrimAnalyzer>False</EnableTrimAnalyzer>     
+        <RunAOTCompilation>False</RunAOTCompilation>   
+    </PropertyGroup> 
 
     <ItemGroup>
         <!-- App Icon -->
@@ -51,6 +58,7 @@
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
         <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
         <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.4" />
     </ItemGroup>
